src/components/card-list.scss
.card-inventory {
  box-sizing: border-box;
  margin: 50px 0;
  width: 100%;
  max-width: 350px;
  max-height: 600px;
  overflow: auto;

  > .title {
    font-size: 20px;
    margin-bottom: 10px;
    font-weight: bold;
    color: #AAA;
  }

  .category {
    margin-bottom: 10px;

    .header {
      font-size: 16px;
      color: white;
      cursor: pointer;

      .label {
        margin-left: 10px;
      }
    }
  }
}

.card-list {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  width: 100%;
  grid-gap: 10px;
  margin: 10px;
  margin-bottom: 20px;

  &.hidden {
    display: none;
  }
}

.card-list .card {
  position: relative;
  width: 140px;
  height: 120px;
  color: white;
  background-color: #555;
  padding: 5px;
  cursor: pointer;
  border-radius: 5px;

  &:hover {
    background-color: #666;
  }

  &.empty {
    color: #999;
    .title img {
      filter: opacity(0.5);
    }
  }

  &.selected:not(.empty) {
    border: 2px solid white;
    background-color: #777;
  }

  .title {
    display: flex;
    grid-gap: 10px;
    align-items: center;
    margin-bottom: 10px;

    img {
      width: 26px;
      height: 26px;
    }
  }

  .description {
    font-size: 14px;
    padding: 0 5px;
  }

  .stats {
    position: absolute;
    bottom: 5px;
    left: 5px;

    .stat {
      border: 2px solid #333;
      border-radius: 3px;
      padding: 5px;
      display: flex;
      justify-content: center;
      align-items: center;
    }

    img {
      width: 16px;
      height: 16px;
      margin-left: 6px;
    }
  }

  .amount {
    position: absolute;
    bottom: 5px;
    right: 5px;
  }
}

